# paper-saver

./: .env.example  .gitignore  README.md  bot.py  extractor.py  fetcher.py  main.py  paper-saver.service  pdf_renderer.py  print_styles.css  pyproject.toml
scripts/: deploy.sh
src/paper_saver/: __init__.py  __main__.py  _fakes.py  app.py  config.py
src/paper_saver/adapters/inbound/: telegram_bot.py  test_telegram_bot.py
src/paper_saver/adapters/outbound/: curl_cffi_page_fetcher.py  httpx_page_fetcher.py  pdf_document.py  readability_article_extractor.py  test_curl_cffi_page_fetcher.py  test_curl_cffi_page_fetcher_live.py  test_httpx_page_fetcher.py  test_pdf_document.py  test_readability_article_extractor.py  test_weasyprint_pdf_renderer.py  weasyprint_pdf_renderer.py
src/paper_saver/application/: convert_url.py  test_convert_url.py
src/paper_saver/assets/: print_styles.css
src/paper_saver/docs/: print_readability.md
src/paper_saver/domain/: errors.py  models.py  test_models.py
src/paper_saver/ports/: article_extractor.py  page_fetcher.py  pdf_renderer.py
