[project]
name = "page-print"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "readability-lxml>=0.8.4.1",
    "weasyprint>=68.1",
]
