[project]
name = "paper-saver"
version = "0.1.0"
description = "Telegram bot that converts URLs into print-friendly PDFs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "readability-lxml>=0.8.4.1",
    "weasyprint>=68.1",
]

[project.scripts]
paper-saver = "paper_saver.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_saver"]

[tool.hatch.build.targets.wheel.force-include]
"src/paper_saver/assets/print_styles.css" = "paper_saver/assets/print_styles.css"
